# rosbags2video

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  bag2images.py  bag2video.py  package.xml  pyproject.toml  setup.py
.github/: mergify.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation.yaml  feature-request.yaml
.github/workflows/: ci.yaml  format.yaml
bag2lib/: __init__.py  utils.py
bag2video/: __init__.py  args.py  bag2images.py  bag2video.py
bag2video_common/: __init__.py  args.py  utils.py
bag2video_rosbags/: __init__.py  bag2images.py  bag2video.py  utils.py
bag2video_rospy/: package.xml  setup.py
bag2video_rospy/scripts/: bag2images  bag2video
rosbags/: pyproject.toml
rosbags/bag2video/: __init__.py  bag2images.py  bag2video.py  utils.py
rosbags2video/: __init__.py  args.py  bag2images.py  bag2video.py  utils.py
rosbags_src/bag2video/: __init__.py  bag2images.py  bag2video.py
rospy/: CMakeLists.txt  setup.py
rospy_src/scripts/: bag2video
